src/components/App.css
@import url('https://fonts.googleapis.com/css?family=Merriweather:300,400&display=swap');
/* GENERAL SETTINGS */
.ui.container {
  padding: 1rem 0 1rem 0;
}
.ui.container h1,
.ui.container h2 {
  padding: 2rem 0rem 3rem 0rem;
  font-weight: 200;
  letter-spacing: 0.2rem;
}

h1,
h1.ui.header {
  color: #444c38;
  text-align: center;
}
h1::after,
.ui.container.productList__shop h2::after {
  content: '';
  display: block;
  width: 6rem;
  height: 1px;
  position: relative;
  top: 1rem;
  left: 50%;
  transform: translate(-50%);
  background-color: #767864;
}
h2,
h3 {
  color: #767864;
}
hr {
  width: 80%;
  height: 1px;
  margin: 3rem auto;
}
p,
.item,
td,
select,
.segment {
  font-weight: 300;
  letter-spacing: 0.03rem;
}

/* GENERAL SETTINGS END */

/* NAVBAR */
.navbar {
  height: 8rem;
}
.navbar__container {
  position: fixed;
  width: 100%;
  height: fit-content;
  z-index: 100;
}
.menu__logo-container {
  padding: 1.5rem 0;
  background-color: #f4f1ea;
}
/* .menu__logo-container::after {
  content: '';
  display: block;
  width: 50px;
  height: 2px;
  position: absolute;
  top: 5rem;
  left: 50%;
  transform: translate(-50%);
  background-color: #767864;
} */
.ui.small.image.logo {
  min-width: 200px;
  height: 65px;
  margin: 0 auto;
}
.ui.stackable.green.inverted.menu {
  margin-top: 0;
  top: 5.5rem;
  font-family: 'Merriweather', serif;
  font-weight: 300;
}
.circular.ui.button.menu__burger-btn {
  display: none;
  position: absolute;
  top: 20px;
  right: 5px;
}
@media screen and (max-width: 767px) {
  .menu__logo-container {
    padding: 0.5rem 0;
  }
  .ui.stackable.green.inverted.menu .item {
    text-align: center;
  }
  .circular.ui.icon.button.menu__burger-btn {
    display: block;
  }
  .ui.stackable.green.inverted.menu {
    height: 2.3rem;
    overflow: hidden;
    animation: slide 1s ease-in-out 3.5s;
    transition: 0.3s;
  }
  .ui.stackable.green.inverted.menu.invisible {
    height: 19.5rem;
    animation: slide 1s ease-in-out 3.5s;
    transition: 0.3s;
  }
  @keyframes slide {
    from {
      height: 2.3rem;
    }
    to {
      height: 19.5rem;
    }
  }
  .bars.icon.invisible {
    display: none;
  }
  .close.icon.invisible {
    display: none;
  }
}
.ui.inverted.menu .item {
  transition: 0.3s;
}
.ui.inverted.menu .item:hover {
  color: #e79796 !important;
}
/* NAVBAR END */

/* HOME PAGE */
.home__opening {
  width: 100%;
  height: 88vh;
  display: flex;
  justify-content: center;
  align-items: center;
}
.home::after {
  content: '';
  background: url('https://images.unsplash.com/photo-1578030011717-592b32b82ff3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80')
    fixed top center / cover no-repeat;
  opacity: 0.8;
  top: 6rem;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  z-index: -1;
}
.home__opening h3 {
  font-style: italic;
  font-weight: 200;
  letter-spacing: 0.1rem;
  color: #444c38;
}
.home__opening strong h3 {
  font-weight: 400;
  transition: 0.3s;
}
.home__opening strong h3:hover {
  color: #e79796;
}
.ui.stackable.center.aligned.segment.title {
  background-color: rgba(244, 241, 234, 0.6);
  max-width: 35rem;
  padding: 2rem 1rem;
}
.home__bg {
  background-color: #fff;
}
.home__pro {
  background-color: #f4f1ea;
}
/* HOME PAGE END */

/* PRODUCT LIST */
.ui.container.productList__shop {
  text-align: center;
}
.productList__ask {
  text-align: center;
  padding-top: 2rem;
}
.productList__contact {
  display: flex;
  justify-content: center;
  margin: 2rem 0rem 2rem 0rem;
}
.productList__pres {
  padding-top: 1rem;
}
.ui.container.productList__shop h2 {
  padding: 1rem 0 2rem 0;
}
/* PRODUCT LIST END */

/* PRODUCT CARD */
.productCard__caption {
  display: flex;
  justify-content: space-between;
  margin: 0.8rem 0;
}
.description {
  padding: 10px;
}
.productCard__desc-btn {
  border: 1px solid #ddd2c3;
  border-radius: 5px;
}
.productCard__price {
  position: absolute;
  bottom: 10px;
  right: 10px;
}

.ui.dropdown.product_select {
  color: #767864;
}
.ui.card > .content > a.header {
  color: rgba(118, 120, 100, 0.8) !important;
  transition: 0.3s !important;
}
.ui.card > .content > a.header:hover {
  color: #e79796 !important;
}
/* PRODUCT CARD END */

/* PRODUCT-FORM */
.ui.grid.productForm__container {
  padding-top: 4em;
}
/* PRODUCT-FORM END */

/* PRODUCT DETAILS */
.productDetails__buttons {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.ui.center.aligned.dividing.header {
  padding-bottom: 2rem;
  /* margin-top: 2rem; */
}
.productDetails__img {
  border-radius: 5px;
  box-shadow: 5px 5px 5px darkgrey;
}
/* PRODUCT DETAILS END */

/* CONTEXT-DELIVERY */
.context-delivery {
  background-color: #f4f1ea;
  padding: 2rem 0;
}
.ui.container h2.context__title {
  padding-top: 0;
  padding-bottom: 1rem;
}
.context__flex {
  display: flex;
  align-items: center;
}
.ui.bulleted.list {
  margin: 0;
}
i.recycle.big.green.icon {
  margin-right: 2rem;
}
.context__img {
  border-radius: 5px;
  box-shadow: 5px 5px 5px darkgrey;
  margin: 2rem 0;
}
.ui.centered.card.delivery__card {
  margin-top: 0.6rem;
  font-size: 0.9rem;
}
.delivery_msg {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 1rem 0;
}
.delivery_msg p {
  margin: 0 1rem;
}
.delivery__time {
  text-align: center;
}
.deliveryCities {
  margin: 0.5rem 0;
}
.deliveryTime {
  display: flex;
  align-items: center;
}
.delivery_alone {
  margin-top: 1rem;
}
/* CONTEXT-DELIVERY END */

/* ARTICLES */
.articles__img {
  margin: 1rem 0;
  border-radius: 5px;
  box-shadow: 5px 5px 5px darkgrey;
}
.ui.container h1.articles__title {
  margin-top: 2rem;
}

.ui.stackable.grid.articles > .column:not(.row),
.ui.grid > .row > .column.articles {
  display: flex;
  justify-content: center;
}

.container.wedding {
  margin: 3rem 4rem;
}
.container h1 {
  font-weight: 200;
  letter-spacing: 0.2rem;
}

.column.wedding {
  padding: 5rem 0;
  justify-content: center;
  align-items: center;
}
.wedding-flex {
  display: flex;
  justify-content: space-between;
}
.wedding-flex .five.wide.column {
  width: 48%;
}
.middle {
  margin: 2rem 0;
}

@media screen and (max-width: 767px) {
  .container.wedding {
    margin: 3rem 0.5rem;
  }
  .wedding-flex {
    flex-direction: column;
  }
  .wedding-flex .five.wide.column {
    width: 100%;
  }
  .wedding-flex .five.wide.column:first-child {
    margin-bottom: 2rem;
  }
}
/* ARTICLES END */

/* CART */
.cart {
  border: 1px solid lightgrey;
  border-radius: 5px;
  margin-bottom: 3rem;
}
.cart__item {
  border-bottom: 1px solid lightgrey;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.cart__item-photo {
  margin: 1rem;
  width: 5rem;
}
.cart__item-description {
  width: 78%;
}
.cart__item-description p {
  margin-bottom: 0;
  font-weight: 300;
  letter-spacing: 1px;
  font-size: 14px;
}
.cart__item-btn {
  margin: 0.5rem;
}
.cart__footer {
  display: flex;
  justify-content: flex-end;
  padding: 1rem;
  background-color: #f0f0f0;
}
/* CART END */

/* FOOTER */
.footer__container {
  margin-bottom: 0;
  margin-top: 2rem;
}
.footer p {
  font-size: 0.8rem;
}
.footer a {
  font-size: 0.9rem;
}
.footer h4 {
  font-weight: 200;
  letter-spacing: 0.1rem;
}
.footer .footer-contact {
  margin-bottom: 0;
  line-height: inherit;
}
.inverted.teal.row.footer .column {
  color: #767864;
}
.inverted.teal.row.footer .segment {
  padding: 0 1rem;
}
.footer .ui.grid > .column:not(.row),
.ui.grid > .row > .column {
  padding-left: 2rem;
}
.footer__link,
.footer__container i.green.icon {
  color: #767864;
  transition: 0.3s;
}
.footer__link:hover,
.footer__container i.green.icon:hover {
  color: #e79796 !important;
}
.footer__container > .ui.grid {
  margin: 0;
}
.footer .ui.grid > .column:not(.row) {
  padding-top: 0;
  padding-bottom: 0;
}
.inverted.grey.row.footer.logo {
  padding: 0.2rem 0;
}
@media screen and (max-width: 767px) {
  .footer .ui.grid > .column:not(.row),
  .ui.grid > .row > .column {
    text-align: center;
  }
  .footer .column.eight.wide.logo {
    display: flex;
    justify-content: center;
  }
  .footer__container > .ui.grid .ui.stackable.grid {
    margin-left: 0 !important;
  }
  .inverted.grey.row.footer.logo
    .ui.grid.two.stackable.column
    .column.eight.wide.logo {
    padding: 0 !important;
  }
}

/* FOOTER POSITION */
.app {
  position: relative;
  min-height: 100vh;
}
.app__content {
  padding-bottom: 12rem;
}
.footer__container {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 12rem;
}
/* FOOTER END */

